[gd_scene load_steps=7 format=2]

[ext_resource path="res://Components/NPC/NPC Message.gd" type="Script" id=1]
[ext_resource path="res://Interface/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Interface/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="NPC Talk" type="CanvasLayer"]
layer = 100

[node name="Message" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="Message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -157.08
margin_right = 429.0
margin_bottom = 168.92
color = Color( 0, 0, 0, 0.352941 )

[node name="Name" type="Label" parent="Message/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -414.5
margin_top = 16.0
margin_right = 414.5
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Alan:"

[node name="Message Box" type="Label" parent="Message/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -415.414
margin_top = 79.939
margin_right = 391.586
margin_bottom = 158.939
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.94902, 0.94902, 1 )
text = "<message>"

[node name="AmmoKit" type="Button" parent="Message/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -404.195
margin_top = 69.3459
margin_right = -136.195
margin_bottom = 139.346
rect_pivot_offset = Vector2( 101.331, 31.9539 )
custom_fonts/font = SubResource( 3 )
text = "Ammo Kit"

[node name="HealthKit" type="Button" parent="Message/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.767
margin_top = 70.313
margin_right = 166.233
margin_bottom = 140.313
rect_pivot_offset = Vector2( 101.331, 31.9539 )
custom_fonts/font = SubResource( 3 )
text = "Health Kit"

[node name="Exit" type="Button" parent="Message/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 208.549
margin_top = 71.8299
margin_right = 408.549
margin_bottom = 141.83
custom_fonts/font = SubResource( 4 )
text = "Exit"
[connection signal="pressed" from="Message/Background/AmmoKit" to="Message" method="_on_AmmoKit_pressed"]
[connection signal="pressed" from="Message/Background/HealthKit" to="Message" method="_on_HealthKit_pressed"]
[connection signal="pressed" from="Message/Background/Exit" to="Message" method="_on_Exit_pressed"]
